--- a/.cproject
+++ b/.cproject
@@ -26,9 +26,9 @@
 								</outputEntries>
 							</builder>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.330785347" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
-								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.343696646" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.debugging.level.135418578" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.include.paths.1622553451" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.343696646" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.debugging.level.135418578" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.include.paths.1622553451" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Common/inc"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WebServer/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/variants/nodemcu"/>
@@ -42,17 +42,18 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/cores/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
-								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1339498969" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1339498969" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
 									<listOptionValue builtIn="false" value="ARDUINO"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.16840648" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.1684691015" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler">
-								<option id="gnu.cpp.compiler.option.optimization.level.860857690" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.debugging.level.310428508" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.include.paths.904402430" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+								<option id="gnu.cpp.compiler.option.optimization.level.860857690" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.debugging.level.310428508" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.include.paths.904402430" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Common/inc"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WebServer/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/variants/nodemcu"/>
@@ -63,8 +64,9 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/cores/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.preprocessor.def.1109015738" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+								<option id="gnu.cpp.compiler.option.preprocessor.def.1109015738" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
 									<listOptionValue builtIn="false" value="ARDUINO"/>
 								</option>
@@ -96,6 +98,7 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/cores/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1461950491" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -128,9 +131,9 @@
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.targetPlatform.gnu.cross.750431427" isAbstract="false" osList="all" superClass="cdt.managedbuild.targetPlatform.gnu.cross"/>
 							<builder buildPath="${workspace_loc:/ea_actor}/Release" id="cdt.managedbuild.builder.gnu.cross.1687207882" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.compiler.1220865671" name="Cross GCC Compiler" superClass="cdt.managedbuild.tool.gnu.cross.c.compiler">
-								<option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.option.optimization.level.624583008" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.debugging.level.1406750156" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" value="gnu.c.debugging.level.none" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.include.paths.532783835" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+								<option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.option.optimization.level.624583008" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.debugging.level.1406750156" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.include.paths.532783835" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/cores/esp8266}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/libraries/ESP8266mDNS}&quot;"/>
@@ -148,17 +151,18 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/driver}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
-								<option id="gnu.c.compiler.option.preprocessor.def.symbols.897308332" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.897308332" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
 									<listOptionValue builtIn="false" value="ARDUINO"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.382711341" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.1841483408" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler">
-								<option id="gnu.cpp.compiler.option.optimization.level.1891099743" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.debugging.level.821743509" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
-								<option id="gnu.cpp.compiler.option.include.paths.693099438" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+								<option id="gnu.cpp.compiler.option.optimization.level.1891099743" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.debugging.level.821743509" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.include.paths.693099438" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/cores/esp8266}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/home/lieven/workspace/Arduino/libraries/ESP8266mDNS}&quot;"/>
@@ -176,8 +180,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/driver}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.preprocessor.def.58934968" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" valueType="definedSymbols">
+								<option id="gnu.cpp.compiler.option.preprocessor.def.58934968" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
 									<listOptionValue builtIn="false" value="ARDUINO"/>
 								</option>
@@ -210,6 +215,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/driver}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.737304301" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -243,8 +249,13 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope" versionNumber="1">
-		<resource resourceType="PROJECT" workspacePath="/ea_actor"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/ea_actor"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/ea_actor"/>
+		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 		<buildTargets>
