--- a/.cproject
+++ b/.cproject
@@ -36,13 +36,14 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/xtensa-lx106-elf/include"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/xtensa-lx106-elf/include/c++/4.8.2"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/lib/gcc/xtensa-lx106-elf/4.8.2/include/"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/driver"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/dwm1000"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/cores/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1339498969" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
@@ -65,6 +66,9 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.1109015738" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
@@ -86,19 +90,17 @@
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WebServer/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/variants/nodemcu"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/sdk/include"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/Actor"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/Common/inc"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/xtensa-lx106-elf/include"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/xtensa-lx106-elf/include/c++/4.8.2"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/tools/xtensa-lx106-elf/lib/gcc/xtensa-lx106-elf/4.8.2/include/"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/driver"/>
-									<listOptionValue builtIn="false" value="../ea_stm32/ea_actor/dwm1000"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/cores/esp8266"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266mDNS"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/ESP8266WiFi/src"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1461950491" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -152,6 +154,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.897308332" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
@@ -181,6 +186,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.58934968" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__ARDUINO__"/>
@@ -216,6 +224,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ea_actor/dwm1000}&quot;"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/SPI"/>
 									<listOptionValue builtIn="false" value="/home/lieven/workspace/Arduino/libraries/EEPROM"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32_programmer/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/pubsubclient/src"/>
+									<listOptionValue builtIn="false" value="/home/lieven/workspace/ArduinoJson"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.737304301" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
