--- a/.project
+++ b/.project
@@ -84,4 +84,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src</name>
+			<type>2</type>
+			<location>/home/lieven/workspace/pubsubclient/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
